kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colocauto-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: colocauto-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: colocauto-test
