kubernetes/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      annotations:
        rollme: v1
      labels:
        app: laravel
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/mobicoop/colocauto/colocauto/api:latest
          ports:
            - containerPort: 80
          volumeMounts:
          - name: oauth
            mountPath: "/var/secret/"
            readOnly: true
      volumes:
        - name: oauth
          secret:
            defaultMode: 420
            secretName: oauth-keys
