kubernetes/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: database
                operator: In
                values:
                - dev
      containers:
        - name: database
          image: registry.gitlab.com/mobicoop/colocauto/colocauto/database:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/colocauto
              name: database-volume
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: database-pv-dev-claim
