kubernetes/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: vue
spec:
  selector:
    app: vue
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.colocauto.org
    secretName: dev-colocauto-org-acme-tls
  rules:
  - host: dev.colocauto.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 80
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /storage
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /auth/google
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    name: vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      name: vue
      labels:
        app: vue
    spec:
      containers:
      - name: app
        image: registry.gitlab.com/mobicoop/colocauto/colocauto/vue:v2022-11-07bis
        imagePullPolicy: Always
        ports:
          - name: vue
            containerPort: 8080
      restartPolicy: Always
